--- a/src/components/search.bar/index.scss
+++ b/src/components/search.bar/index.scss
@@ -10,26 +10,23 @@
     flex-shrink: 0;
     .title{
     }
-    img{
+    .icon{
       margin-left: 5px;
       display: block;
-      background-color: #FFBA10;
       width: 10px;
       height: 10px;
     }
   }
   .search-item{
-    background: #e6e6e6;
+    background: #f4f4f4;
     width: 100%;
     height: 35px;
     margin-left: 10px;
     padding: 5px 5px;
     border-radius: 5px;
-    &::before{
-      content: '';
-      background-color: #FFBA10;
-      width: 10px;
-      height: 10px;
+    .icon{
+      width: 15px;
+      height: 15px;
     }
     .input{
       outline: none;
@@ -43,8 +40,4 @@
       }
     }
   }
-}
-
-.tmp{
-  background: red;
 }
