不可运行！！ 开发到分类演出列表页

--- a/assets/constant.scss
+++ b/assets/constant.scss
@@ -7,5 +7,16 @@ $tc-2: #999999;
   font-size: 17px;
 }
 
+.subtitle-1{
+  color: $tc-2;
+  font-size: 17px;
+}
+
+.subtitle-2{
+  color: $tc-2;
+  font-size: 15px;
+}
+
+
 $seg-color: #f0f0f0;
 $bg-color: #f0f0f0;
