--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -2,4 +2,13 @@
 .App {
     color: $tc-main;
 }
+.performance-name{
+    max-height: 40px;
+    line-height: 20px;
+    font-size: 15px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
 
