开始用户信息系统

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,6 +1,8 @@
 @import "assets/constant";
 .App {
     color: $tc-main;
+    min-width: 100vw;
+    min-height: 100vh;
 }
 .performance-name{
     max-height: 40px;
