调到生成订单

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -3,6 +3,7 @@
     color: $tc-main;
     min-width: 100vw;
     min-height: 100vh;
+    background: white;
 }
 .performance-name{
     max-height: 40px;
