--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -4,6 +4,7 @@
     min-width: 100vw;
     min-height: 100vh;
     background: white;
+    padding-top: $nav-height;
 }
 .performance-name{
     max-height: 40px;
