--- a/src/views/performance/performance.select.view/index.scss
+++ b/src/views/performance/performance.select.view/index.scss
@@ -59,7 +59,6 @@ $bottom-bar-height: 50px;
       }
     }
   }
-
   .person-container{
     padding: 0 15px;
     .content{
@@ -75,6 +74,12 @@ $bottom-bar-height: 50px;
         flex: 1;
         font-size: 12px;
         color: $tc-2;
+        .name{
+
+        }
+        .phone{
+
+        }
       }
       .icon-wrapper{
         height: 20px;
