--- a/src/views/invoice/invoice.index.view/index.scss
+++ b/src/views/invoice/invoice.index.view/index.scss
@@ -1,7 +1,6 @@
 .invoice-index-view {
   background-color: #f4f4f4;
   width: 100vw;
-  height: 100vh;
 
   .ticket-content, .user-content, .submit-content {
     background-color: #fff;
@@ -40,7 +39,6 @@
 
         img {
           width: 5vw;
-          height: 2.4vh;
           margin-right: 6px;
         }
 
@@ -84,7 +82,8 @@
       left: 0;
 
       .item-area {
-        height: 45px;
+        min-height: 45px;
+        height: auto;
         border-bottom: 1px solid #f0f0f0;
         font-size: 14px;
 
@@ -98,15 +97,33 @@
             height: 34px;
             border: none;
           }
-
-          input::-webkit-input-placeholder {
-            color: #999;
-          }
         }
       }
 
-      .last-item-area {
-        border: none;
+      .title {
+        border-bottom: 1px solid #f0f0f0;
+        height: 45px;
+        position: relative;
+
+        img {
+          position: absolute;
+          right: 0;
+          top: 15px;
+          width: 16px;
+        }
+      }
+
+      .tip {
+        color: #999;
+        font-size: 12px;
+        padding: 5px 0;
+        line-height: 20px;
+        border-bottom: none;
+      }
+
+      .btn {
+        margin: 5px 0 10px 0;
+        border-bottom: none;
       }
     }
   }
@@ -117,15 +134,15 @@
     bottom: 0;
     height: 62px;
     width: 100vw;
+  }
 
-    .btn {
-      background-color: #4190e9;
-      color: #fff;
-      width: 90vw;
-      height: 44px;
-      line-height: 46px;
-      border-radius: 2px;
-      text-align: center;
-    }
+  .btn {
+    background-color: #4190e9;
+    color: #fff;
+    width: 90vw;
+    height: 44px;
+    line-height: 46px;
+    border-radius: 2px;
+    text-align: center;
   }
 }
