--- a/src/views/manage/buyer.view/index.scss
+++ b/src/views/manage/buyer.view/index.scss
@@ -32,9 +32,9 @@
     margin: 10px 15px;
     height: 40px;
     line-height: 40px;
-    background: #e5f4fe;
+    background: $theme-light-color;
     text-align: center;
-    color: #0093f8;
-    border-radius: 5px;
+    color: $theme-color;
+    border-radius: 20px;
   }
 }
