--- a/src/views/order/order.confirm.view/index.scss
+++ b/src/views/order/order.confirm.view/index.scss
@@ -47,15 +47,16 @@
       margin: 0 15px;
       border-bottom: 1px solid $seg-color;
       .placeholder{
-        width: 30px;
+        flex: 0 0;
         height: 30px;
-        border-radius: 15px;
-        background: #f4f4f4;
-        text-align: center;
-        margin: 0 10px;
+        line-height: 30px;
+        align-self: self-start;
+        padding: 0 10px;
+        font-size: 12px;
+        color: $tc-2;
       }
       .info{
-        flex: 1;
+        flex: 1 0;
         justify-content: space-around;
         min-height: 50px;
       }
@@ -91,7 +92,7 @@
       }
     }
 
-    .subinfo{
+    .exporess{
       padding-bottom: 10px;
       font-size: 12px;
       color: $tc-1;
@@ -105,6 +106,44 @@
       }
       .none{
         color: #d3483e;
+      }
+    }
+    .shop{
+      padding: 0 30px;
+      margin-top: 10px;
+      .subtitle{
+        font-size: 12px;
+        color: $tc-1;
+        min-height: 25px;
+      }
+      .wrapper{
+        background: #f7f7f7;
+        padding: 10px 10px;
+        overflow-y: auto;
+        height: 150px;
+        border-radius: 5px;
+        .scroller{
+          .item{
+            min-height: 50px;
+            margin: 10px 0;
+            .icon-wrapper{
+              width: 20px;
+              height: 20px;
+              margin-right: 10px;
+            }
+            .address-wrapper{
+              flex: 1;
+              .name{
+                color: $tc-1;
+                font-size: 15px;
+              }
+              .address{
+                color: $tc-2;
+                font-size: 13px;
+              }
+            }
+          }
+        }
       }
     }
   }
