--- a/src/components/navigator/index.module.scss
+++ b/src/components/navigator/index.module.scss
@@ -5,18 +5,28 @@
   left: 0;
   right: 0;
   top: 0;
+  max-width: 100vw;
   height: $nav-height;
   background: #fbfbfb;
   border-bottom: 1px solid $seg-color;
   padding: 0 15px;
 }
 
-.left{
+.back{
   width: 20px;
   height: 100%;
 }
 
-.middle{
+.placeholder{
+  width: 20px;
+  height: 100%;
+}
+
+.title{
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   text-align: center;
+  margin: 0 10px;
   flex: 1;
 }
