--- a/src/views/order/order.confirm.view/index.scss
+++ b/src/views/order/order.confirm.view/index.scss
@@ -43,6 +43,20 @@
         font-size: 12px;
         color: $tc-2;
       }
+      .empty{
+        flex: 1;
+      }
+      .add-btn{
+        font-size: 12px;
+        margin-right: 0;
+        text-align: right;
+        height: 28px;
+        line-height: 28px;
+        padding: 0 15px;
+        border-radius: 14px;
+        border: 1px solid $seg-color;
+        color: $theme-color;
+      }
     }
     .content{
       margin: 0 15px;
@@ -56,18 +70,21 @@
         font-size: 12px;
         color: $tc-2;
       }
-      .info{
+      .buyer-list{
         flex: 1 0;
         justify-content: space-around;
         min-height: 50px;
-      }
-      .person{
-        font-size: 12px;
-        color: $tc-2;
-        .name, .phone{
-          color: $tc-1;
-          &.name{
-            margin-right: 10px;
+        padding: 10px 0;
+        .person{
+          font-size: 12px;
+          color: $tc-2;
+          min-height: 20px;
+          .name, .phone{
+            color: $tc-1;
+            &.name{
+              margin-right: 10px;
+              //width: 80px;
+            }
           }
         }
       }
